# Athena

./: .clang-tidy  .gitignore  .gitmodules  AthenaConfig.h.in  CMakeLists.txt  CMakePresets.json  ChesspeerConfig.h.in  HACKING.md  README.md  chesspeer.sln  conanfile.py  vcpkg.json
chesspeer/: CMakeLists.txt  board.h  chessboard.cpp  chessboard.h  chessgame.cpp  chessgame.h  chesspeer.cpp  chesspeer.vcxproj  chesspeer.vcxproj.filters
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
data/: CMakeLists.txt
lib/: CMakeLists.txt
source/: CMakeLists.txt  athena.cpp  chessgame.cpp  chessgame.h  main_window.cpp  main_window.h
src/: CMakeLists.txt  ChesspeerConfig.h  ChesspeerConfig.h.in  chessboard.cpp  chessboard.h  chessgame.cpp  chessgame.h  chesspeer.cpp  chesspeer.h  config.h.in  main_window.cpp  main_window.h
test/: CMakeLists.txt  athenaTests.cpp
tst/: AthenaTests.cpp  CMakeLists.txt  ChesspeerTests.cpp
unix/: build.sh  configure.sh  run.sh
windows/: build.bat  configure.bat  run.bat
